fix: update config nginx

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,5 +4,5 @@ COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY ./conf.d /etc/nginx/conf.d
 
 RUN mkdir -p /var/log/nginx
-RUN mkdir -p /home/app/staticfiles
-RUN mkdir -p /home/app/mediafiles
+RUN mkdir -p /app/staticfiles
+RUN mkdir -p /app/mediafiles
