--- a/nginx/conf.d/1.backend.conf
+++ b/nginx/conf.d/1.backend.conf
@@ -6,15 +6,15 @@ upstream sige-api {
 server {
     listen      80;
     listen      [::]:80;
-    server_name sige.lappis.me;
+    server_name sige-2.lappis.tech;
 
     # ACME-challenge
     location ^~ /.well-known/acme-challenge/ {
-        root /var/www/_letsencrypt;
+        root /etc/ssl/_letsencrypt;
     }
 
     location / {
-        return 301 https://sige.lappis.me$request_uri;
+        return 301 https://sige-2.lappis.tech$request_uri;
     }
 }
 
@@ -22,15 +22,15 @@ server {
     listen                  443 ssl;
     listen                  [::]:443 ssl;
 
-    server_name             sige.lappis.me;
-    set                     $workdir /home/app/;
+    server_name             sige-2.lappis.tech;
+    set                     $workdir /app;
 
     # SSL
-    ssl_certificate         /etc/letsencrypt/live/lappis.me/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/lappis.me/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/lappis.me/chain.pem;
+    ssl_certificate         /etc/letsencrypt/live/sige-2.lappis.tech/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/sige-2.lappis.tech/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/sige-2.lappis.tech/chain.pem;
 
-    # Security Headers
+    # Security Headerss
     add_header X-Frame-Options SAMEORIGIN;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
@@ -49,6 +49,7 @@ server {
         proxy_cache_bypass                 $http_upgrade;
         
         # Proxy headers
+        proxy_set_header Host              $host;
         proxy_set_header Upgrade           $http_upgrade;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header Connection        "";
@@ -67,33 +68,26 @@ server {
         error_log /var/log/nginx/api_error.log error;
     }
 
-    Redoc (API documentation)
-    location /api/redoc/ {
-        proxy_pass http://sige-api;
-    }
-
-    # Swagger (API documentation)
-    location /api/swagger/ {
-        proxy_pass http://sige-api;
-    }
-
-    # Management Django admin
-    location /api/management/ {
+    location /api-auth/ {
         proxy_pass http://sige-api;
     }
     
-    # Django media
-    location /media/ {
-        alias $workdir/mediafiles/;
-        expires 30d;
-        access_log off;
+    location /admin/ {
+        proxy_pass http://sige-api;
     }
 
-    # Django static
-    location /static/ {
-        alias $workdir/staticfiles/;
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public";
-    }
+   # Django media
+   location /media/ {
+       alias $workdir/mediafiles/;
+       expires 30d;
+       access_log off;
+   }
+
+   # Django static
+   location /static/ {
+       alias $workdir/staticfiles/;
+       expires 1y;
+       access_log off;
+       add_header Cache-Control "public";
+   }
 }
