--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,7 +32,7 @@ http {
     ssl_session_tickets    off;
 
     # Diffie-Hellman parameter for DHE ciphersuites
-    ssl_dhparam            /etc/nginx/dhparam.pem;
+    ssl_dhparam            /etc/ssl/certs/dhparam.pem;
 
     # Mozilla Intermediate configuration
     ssl_protocols          TLSv1.2 TLSv1.3;
@@ -48,6 +48,18 @@ http {
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ""      close;
+    }
+
+    # favicon.ico
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
+
+    # robots.txt
+    location = /robots.txt {
+        log_not_found off;
+        access_log off;
     }
 
     # Enable gzip compression for HTTP responses
