perf: otimiza entrega de arquivos estatico no nginx

--- a/nginx/compose.yaml
+++ b/nginx/compose.yaml
@@ -13,6 +13,7 @@ services:
       - /var/lib/letsencrypt:/var/lib/letsencrypt:ro
       - static_volume:/app/staticfiles:ro
       - media_volume:/app/mediafiles:ro
+      - nextjs_static:/app/nextjs_static:ro
     networks:
       - proxy-network
 
@@ -20,6 +21,8 @@ volumes:
   static_volume:
     external: true
   media_volume:
+    external: true
+  nextjs_static:
     external: true
 
 networks:
