--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,7 @@ http {
     sendfile_max_chunk     8m;
     types_hash_max_size    2048;
     types_hash_bucket_size 64;
+    keepalive_timeout      65;
 
     # MIME
     include                mime.types;
