--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,5 +4,4 @@ COPY ./nginx.conf /etc/nginx/nginx.conf
 COPY ./conf.d /etc/nginx/conf.d
 
 RUN mkdir -p /var/log/nginx
-RUN mkdir -p /app/staticfiles
-RUN mkdir -p /app/mediafiles
+RUN mkdir -p /app/{staticfiles,mediafiles,nextjs_static,nextjs_public}
