--- a/nginx/conf.d/3.mepa-front-back.conf
+++ b/nginx/conf.d/3.mepa-front-back.conf
@@ -10,7 +10,7 @@ upstream mepa-web {
 server {
     listen      80;
     listen      [::]:80;
-    server_name <domain>;
+    server_name sige-3.lappis.tech;
 
     # ACME-challenge
     location ^~ /.well-known/acme-challenge/ {
@@ -26,13 +26,17 @@ server {
     listen                  443 ssl;
     listen                  [::]:443 ssl;
 
-    server_name             <domain>;
+    server_name             sige-3.lappis.tech;
     set                     $workdir /app;
 
+    # logging
+    access_log              /var/log/nginx/access.log combined buffer=512k flush=1m;
+    error_log               /var/log/nginx/error.log warn;
+    
     # SSL
-    ssl_certificate         /etc/letsencrypt/live/<domain>/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/<domain>/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/<domain>/chain.pem;
+    ssl_certificate         /etc/letsencrypt/live/sige-3.lappis.tech/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/sige-3.lappis.tech/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/sige-3.lappis.tech/chain.pem;
 
     # Security Headerss
     add_header X-Frame-Options SAMEORIGIN;
@@ -40,12 +44,9 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
 
-    # logging
-    access_log              /var/log/nginx/access.log combined buffer=512k flush=1m;
-    error_log               /var/log/nginx/error.log warn;
 
     location / {
-        proxy_pass http://mepa-web
+        proxy_pass http://mepa-web;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -58,14 +59,43 @@ server {
         proxy_redirect off;
     }
 
+    # Next.js API routes (nextauth)
+    location /api/auth/ {
+        proxy_pass http://mepa-web;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Next.js static files
     location /_next/static/ {
         alias $workdir/nextjs_static/;
         expires 365d;
         access_log off;
-        add_header Cache-Control "public";
+        add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
+    # Next.js icons
+    location /favicon.ico {
+        alias $workdir/nextjs_public/favicon.ico;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+
+    # Next.js icons
+    location /icons/ {
+        alias $workdir/nextjs_public/icons/;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+    
+    # Backend API (Django + DRF)
     location /api/ {
         proxy_pass http://mepa-api;
         
@@ -93,15 +123,7 @@ server {
         access_log /var/log/nginx/api_access.log;
         error_log /var/log/nginx/api_error.log error;
     }
-
-    location /api-auth/ {
-        proxy_pass http://mepa-api;
-    }
     
-    location /admin/ {
-        proxy_pass http://mepa-api;
-    }
-
    # Django media
    location /media/ {
        alias $workdir/mediafiles/;
