--- a/nginx/conf.d/1.sige-back.conf
+++ b/nginx/conf.d/1.sige-back.conf
@@ -1,12 +1,12 @@
 upstream sige-api {
-    server sige-api:8001;
+    server sige-api:8000;
   }
 
 # HTTP redirect to HTTPS
 server {
     listen      80;
     listen      [::]:80;
-    server_name sige-2.lappis.tech;
+    server_name sige.lappis.me;
 
     # ACME-challenge
     location ^~ /.well-known/acme-challenge/ {
@@ -14,7 +14,7 @@ server {
     }
 
     location / {
-        return 301 https://sige-2.lappis.tech$request_uri;
+        return 301 https://$server_name$request_uri;
     }
 }
 
@@ -22,13 +22,13 @@ server {
     listen                  443 ssl;
     listen                  [::]:443 ssl;
 
-    server_name             sige-2.lappis.tech;
+    server_name             sige.lappis.me;
     set                     $workdir /app;
 
     # SSL
-    ssl_certificate         /etc/letsencrypt/live/sige-2.lappis.tech/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/sige-2.lappis.tech/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/sige-2.lappis.tech/chain.pem;
+    ssl_certificate         /etc/letsencrypt/live/sige.lappis.me/fullchain.pem;
+    ssl_certificate_key     /etc/letsencrypt/live/sige.lappis.me/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/sige.lappis.me/chain.pem;
 
     # Security Headerss
     add_header X-Frame-Options SAMEORIGIN;
