--- a/uptimekuma/docker-compose.yml
+++ b/uptimekuma/docker-compose.yml
@@ -1,22 +1,21 @@
 services:
   uptime-kuma:
-    container_name: uptime-kuma
-    image: louislam/uptime-kuma:1.23.2-alpine
+    container_name: ${container_name}
+    image: ${image}:${image_tag}
     restart: unless-stopped
     volumes:
       - ./data:/app/data
       - /var/run/docker.sock:/var/run/docker.sock
     labels:
       traefik.enable: "true"
-      traefik.http.routers.uptime-kuma.rule: "Host(`uptime-kuma.sige.lappis.me`)"
-      traefik.http.services.uptime-kuma.loadbalancer.server.port: "3001"
-      traefik.http.routers.uptime-kuma.service: "uptime-kuma"
+      traefik.http.routers.uptime-kuma.rule: "Host(`${hostname}`)"
+      traefik.http.services.uptime-kuma.loadbalancer.server.port: ${port}
       traefik.http.routers.uptime-kuma.entrypoints: "websecure"
       traefik.http.routers.uptime-kuma.tls.certresolver: "leprod"
     networks:
-        - traefik_proxy
+        - proxy-network
 
 networks:
-    traefik_proxy:
-        name: traefik_proxy
+    proxy-network:
+        name: proxy-network
         external: true
