--- a/traefik/.env
+++ b/traefik/.env
@@ -1,5 +1,5 @@
-container_name=traefik
-image=traefik
-image_tag=3.1.2
-hostname=traefik.lappis.me
-email=unb.sige@gmail.com
+CONTAINER_NAME=traefik
+IMAGE=traefik
+IMAGE_TAG=3.1.2
+HOSTNAME=traefik.lappis.me
+EMAIL=unb.sige@gmail.com
