--- a/uptimekuma/.env
+++ b/uptimekuma/.env
@@ -1,5 +1,5 @@
-container_name=uptime-kuma
-image=louislam/uptime-kuma
-image_tag=1.23.2-alpine
-hostname=uptime-kuma.lappis.me
-port=3001
+CONTAINER_NAME=uptime-kuma
+IMAGE=louislam/uptime-kuma
+IMAGE_TAG=1.23.2-alpine
+HOSTNAME=uptime-kuma.lappis.me
+PORT=3001
