--- a/portainer/.env
+++ b/portainer/.env
@@ -1,5 +1,5 @@
-container_name=portainer
-image=portainer/portainer-ce
-image_tag=2.19.5-alpine
-hostname=portainer.lappis.me
-port=9000
+CONTAINER_NAME=portainer
+IMAGE=portainer/portainer-ce
+IMAGE_TAG=2.19.5-alpine
+HOSTNAME=portainer.lappis.me
+PORT=9000
